hard-gists/5071300/run.log
=== Docker Run Log for 5071300 ===
Started at: Mi 29. Okt 15:20:56 CET 2025

[2025-10-29 15:20:57] START: Running container for 5071300
[2025-10-29 15:20:57] SUCCESS: Container 1c5be8ca249a49118a6dfec9420e7cfeb8748163b68e47307c4e13e6e7f3af80 started for 5071300
=== Container logs for 5071300 ===
  File "/snippet.py", line 107
    print filename, 'not image'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5071300 ===
[2025-10-29 15:20:59] INFO: Container 1c5be8ca249a49118a6dfec9420e7cfeb8748163b68e47307c4e13e6e7f3af80 has stopped
